chore(build): WIP

--- a/provision/etc/portage/make.conf
+++ b/provision/etc/portage/make.conf
@@ -7,3 +7,4 @@ PORTDIR="/usr/portage"
 DISTDIR="${PORTDIR}/distfiles"
 PKGDIR="${PORTDIR}/packages"
 FEATURES="nodoc noinfo noman parallel-fetch"
+source /etc/portage/cpu.conf
